tests/nad_test_14/vms.yaml
apiVersion: kubevirt.io/v1
kind: VirtualMachine
metadata:
  name: vm-a
  namespace: ns-udn-a
spec:
  running: true
  template:
    spec:
      domain:
        devices:
          disks:
            - name: containerdisk
              disk:
                bus: virtio
          interfaces:
            - name: default
              bridge: {}
        resources:
          requests:
            memory: 512Mi
      networks:
        - name: default
          pod: {}
      volumes:
        - name: containerdisk
          containerDisk:
            image: kubevirt/cirros-container-disk-demo
---
apiVersion: kubevirt.io/v1
kind: VirtualMachine
metadata:
  name: vm-b
  namespace: ns-udn-b
spec:
  running: true
  template:
    spec:
      domain:
        devices:
          disks:
            - name: containerdisk
              disk:
                bus: virtio
          interfaces:
            - name: default
              bridge: {}
            - name: macvlan-shared-net
              bridge: {}
        resources:
          requests:
            memory: 512Mi
      networks:
        - name: default
          pod: {}
        - name: macvlan-shared-net
          multus:
            networkName: macvlan-shared-net
      volumes:
        - name: containerdisk
          containerDisk:
            image: kubevirt/cirros-container-disk-demo
---
# vm-c
apiVersion: kubevirt.io/v1
kind: VirtualMachine
metadata:
  name: vm-c
  namespace: ns-c
spec:
  running: true
  template:
    spec:
      domain:
        devices:
          disks:
            - name: containerdisk
              disk:
                bus: virtio
          interfaces:
            - name: default
              bridge: {}
            - name: macvlan-shared-net
              bridge: {}
        resources:
          requests:
            memory: 512Mi
      networks:
        - name: default
          pod: {}
        - name: macvlan-shared-net
          multus:
            networkName: macvlan-shared-net
      volumes:
        - name: containerdisk
          containerDisk:
            image: kubevirt/cirros-container-disk-demo
---
# vm-d
apiVersion: kubevirt.io/v1
kind: VirtualMachine
metadata:
  name: vm-d
  namespace: ns-d
spec:
  running: true
  template:
    spec:
      domain:
        devices:
          disks:
            - name: containerdisk
              disk:
                bus: virtio
          interfaces:
            - name: default
              bridge: {}
            - name: macvlan-shared-net
              bridge: {}
        resources:
          requests:
            memory: 512Mi
      networks:
        - name: default
          pod: {}
        - name: macvlan-shared-net
          multus:
            networkName: macvlan-shared-net
      volumes:
        - name: containerdisk
          containerDisk:
            image: kubevirt/cirros-container-disk-demo
